<resources>
    <string name="app_name">WifiDB</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="offline_header">Offline</string>
    <string name="general_header">General</string>

    <!-- Offline Preferences -->
    <string name="offline_mode">Offline Mode</string>
    <string name="offline_mode_desc">Enable this option to prevent this app from automatically uploading your collected WiFi networks. You must upload your collected data manually</string>

    <!-- General Preferences -->
    <string name="general_rescaninterval">Rescan interval</string>
    <string name="general_rescaninterval_desc">Specifies the time interval in seconds after which WiFi networks are automatically searched for</string>
    <string name="general_contibutorname">Set contributor name</string>
    <string name="general_contibutorname_name">Set the name that will appear as a contributor in your collected networks. Leave it blank if you don\'t want to appear</string>

    <!-- Main Menu -->
    <string name="action_settings">Settings</string>
    <string name="force_rescan">Rescan WiFi now</string>

    <!-- Main actions -->
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_kill">Kill</string>
    <string name="btn_upload">Upload offline records</string>

    <string name="btn_maybelater">Maybe later</string>
    <string name="btn_opensettings">Open Settings</string>
    <string name="btn_close">Close</string>

    <string name="msg_energysafing_title">Energy saving</string>
    <string name="msg_energysafing_text">Please turn off optimization for this app to avoid the app being put to sleep by the system</string>


    <string name="msg_insufficientpermissions_title">Insufficient Permissions</string>
    <string name="msg_insufficientpermissions_text">This application requires the permissions to work properly. Please allow all required permissions and start this app again. This App is now closing.</string>
    <string name="notif_connectedtoserver">Connected to Server</string>
    <string name="msg_uploadrecords_text">Please wait until all records are uploaded. This can take a moment ...</string>
    <string name="msg_uploadrecords_title">Uploading records</string>
    <string name="msg_uploadsuccess_title">Upload successful</string>
    <string name="msg_uploadsuccess_text">Thank you for submitting your WiFi records!</string>
    <string name="msg_uploadfailed_title">Upload failed</string>
    <string name="msg_uploadfailed_text">There was an error during uploading. Please check your internet connectivity and try again later.</string>
    <string name="msg_nothingtoupload_title">Nothing to upload</string>
    <string name="msg_nothingtoupload_text">Before you can upload records, please collect some WiFi Networks in Offline Mode first</string>
    <string name="num_offline_records">%o offline records</string>
    <string name="status_offlinewifirecording">Offline</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_scanningwifinetworks">Scanning...</string>
    <string name="status_connected">Connected</string>
    <string name="status_scanevery_x_seconds">Rescan every %o sec.</string>
    <string name="msg_recordsmigration_title">Migrating records</string>
    <string name="msg_recordsmigration_text">Migrating your existing records. Please wait...</string>
    <string name="toast_x_records_migrated">%o records has been migrated</string>
    <string name="action_viewdbstatus">View Database Status</string>
    <string name="lblcurrentsetsprocessedwval">Datasets in processing-queue: %o</string>
    <string name="lblwifinetworksinonlinedbwval">WiFi networks in database: %o</string>
    <string name="btn_getdatabasestatus_connect">Connect</string>
    <string name="btn_getdatabasestatus_disconnect">Disconnect</string>
    <string name="status_connected_short">Connected</string>
    <string name="status_disconnected_short">Disconnected</string>
    <string name="status_wifinetworks">WiFi Networks: %o</string>
    <string name="status_gps_searching">Searching...</string>
    <string name="status_gps_ok">OK (%o m)</string>
    <string name="app_service_collectionservice">WiFiDB Collection Service</string>
    <string name="msg_nomasterserver_title">No Server</string>
    <string name="msg_nomasterserver_text">No server available to submit. Please restart this app. It will now end.</string>
    <string name="previousscans">Previous Scans</string>
    <string name="msg_apptoold_title">App Version too old</string>
    <string name="msg_apptoold_text">Your installed version of this app is too old. Click OK to open Settings and click then on Search for Updates to install the newest version.</string>
    <string name="action_previousscans">Previous Scans</string>
    <string name="action_clearlist">Clear list</string>
    <string name="msg_clearlist_title">Clear list</string>
    <string name="msg_clearlist_text">Do you really want to clear this list?</string>
    <string name="msgaction_yes">Yes</string>
    <string name="msgaction_no">No</string>
    <string name="msg_scanthrottlingenabled_title">WiFi Scan throttling</string>
    <string name="msg_scanthrottlingenabled_text">WiFi Scan throttling is enabled. Please disable it in the developer options. Its located in the category Networking > \"WiFi Scan throttling\" (or something like that)</string>
    <string name="msg_initializing_title">Initializing</string>
    <string name="msg_initializing_text">Please wait while we establish a connection to our server. This can take a moment</string>
    <string name="msg_noonlinerecording_title">No Online Mode possible</string>
    <string name="msg_noonlinerecording_text">Online mode is not supported in this version of Android. This feature works only in Android 5 higher. Please use offline mode (changeable in the Settings of this App).</string>
    <string name="box_hdr_wifinetworks">WiFi Networks</string>
    <string name="box_hdr_gpsaccuracy">GPS Accuracy</string>
    <string name="box_hdr_rescaninterval">Rescan Interval</string>
    <string name="box_hdr_coordinates">Coordinates</string>
    <string name="status_na">N/A</string>
    <string name="box_hdr_status">Status</string>
    <string name="useonlinetiles_title">Enable Online Map Tiles</string>
    <string name="useonlinetiles_desc">Enables the map function on the main screen of this app. A restart of this app may be required.</string>
    <string name="msg_updateofflinerecs_title">Please wait...</string>
    <string name="msg_updateofflinerecs_text">Counting offline measurements... This may take a moment</string>
    <string name="btn_locatemebynetworks">Try locate me using near Networks</string>
    <string name="lbl_latitude_val">Latitude: %s</string>
    <string name="lbl_longitude_val">Longitude: %s</string>
    <string name="lbl_accuracy_val">Accuracy: %s m</string>
    <string name="lbl_nominatim_addr">Address (got using Nominatim):</string>
    <string name="btn_showonmap">Show on Map</string>
    <string name="toast_turning_wifi_on">Turning WiFi on...</string>
    <string name="men_findpositionbynetwork">Find current position by WiFi</string>
    <string name="msg_searchposition_title">Positioning in progress...</string>
    <string name="msg_searchposition_text_scanwifi">Scanning near WiFi networks...</string>
    <string name="msg_searchposition_text_srvproc">Processing your request on our server</string>
    <string name="msg_searchposition_text_nominatim">Determine your Address using Nominatim...</string>
    <string name="msg_error_title">An exception has thrown</string>
    <string name="msg_error_text">Something went wrong.%nDetails: %s %nIf the problem persists, restart the app.</string>
    <string name="activity_networkpositionfinder">Determine Networks using near WiFi Networks</string>
    <string name="version">Version %s</string>
    <string name="btn_searchforupdates">Search for Updates</string>
    <string name="msg_searchforupdates_title">App-Update</string>
    <string name="msg_searchforupdates_text">Searching for Updates...</string>
    <string name="msg_update_maintenance_title">Server Maintenance</string>
    <string name="msg_update_maintenance_text">Our update server is currently under maintenance. Please try again later.</string>
    <string name="msg_update_downloading_title">App-Update</string>
    <string name="msg_update_downloading_text">Downloading Update... Do not turn off your device or switch the app</string>
    <string name="msg_update_exception_title">Update failed</string>
    <string name="msg_update_exception_text">There was an error during downloading: %s</string>
    <string name="msg_update_install_title">Installing Update</string>
    <string name="msg_update_install_text">Please wait while the update is installed.</string>
    <string name="msg_update_uptodate_title">App is up-to-date</string>
    <string name="msg_update_uptodate_text">You have the newest version already installed.</string>
    <string name="appearance_header">Appearance</string>
    <string name="msg_searchposition_nothingfound_title">Position not found</string>
    <string name="msg_searchposition_nothingfound_text">Your current position could not be determined using our current WiFi data. But you can help to find more networks.</string>
    <string name="btn_letsgo">Let\'s go</string>
    <string name="preferredtheme_text">Preferred Theme</string>
    <string name="preferredtheme_title">You can set your color theme for this app. Please restart the app to apply this setting.</string>
    <string name="sslsetting_title">SSL/TLS Connection</string>
    <string name="sslsetting_text">Change the SSL/TLS settings, if you encounter problems or disable it completely (not recommended). Note: This setting has no effect if you are using Android 4.x. A restart of the app is required to apply the settings.</string>
    <string name="autostart_title">Start Service on Boot (Autostart)</string>
    <string name="autostart_text">Start the WifiDB collection service automatically when the device boots up.</string>
    <string name="advancedoptions_header">Advanced options</string>
    <string name="settings_encryption_default_ssltls">SSL/TLS (Default)</string>
    <string name="settings_encryption_noverify">SSL/TLS No Verify</string>
    <string name="settings_encryption_unencrypted">Unencrypted (not recommended, fail-safe option)</string>
    <string name="men_reloadmasterserver">Reload Masterserver variables</string>
    <string name="men_advanced">Advanced</string>
    <string name="msg_notallpermissionsallowed_title">Missing permissions</string>
    <string name="msg_notallpermissionsallowed_text">Please allow the permissions to get started</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="dlman_update_title">WiFiDB Update</string>
    <string name="dlman_update_text">Downloading WiFiDB App-Update...</string>
    <string name="msg_updatedlfailed_title">Download failed</string>
    <string name="msg_updatedlfailed_text">Update download was not successfull. Please try again later</string>


</resources>