<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/men_clearprevscanslist"
        android:icon="@drawable/ic_baseline_cloud_24"
        android:title="@string/action_viewdbstatus"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/men_previousscans"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/action_previousscans"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/men_findpositionbynetwork"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="@string/men_findpositionbynetwork"
        app:showAsAction="ifRoom" />
    <item android:title="@string/men_advanced">
        <menu>
            <item
                android:id="@+id/men_reloadmasterserver"
                android:icon="@drawable/ic_baseline_refresh_24"
                android:title="@string/men_reloadmasterserver"
                android:visible="true"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
    <item
        android:id="@+id/men_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/action_settings" />
</menu>